# cmake_ground

./: .clang-tidy  .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md
.github/: pull_request_template.md
cmake/: find_gtest.cmake
module/: CMakeLists.txt
module/example/: CMakeLists.txt
module/example/include/example/: utils.hpp
module/example/src/: utils.cpp
module/example/test/: CMakeLists.txt
module/example/test/unit/: CMakeLists.txt  main.cpp  utils.cpp
src/: main.cpp
