set(PACKAGE_NAME CMAKE_GROUND_EXAMPLE)
set(PACKAGE_VERSION 0.1.1)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(${PACKAGE_NAME}_PATH ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "${PACKAGE_NAME}_PATH")
set(${PACKAGE_NAME}_SOURCE_PATH "${${PACKAGE_NAME}_PATH}/src" CACHE PATH "CMAKE_GROUND_INCLUDE_PATH")
set(${PACKAGE_NAME}_INCLUDE_PATH "${${PACKAGE_NAME}_PATH}/include" CACHE PATH "CMAKE_GROUND_INCLUDE_PATH")
set(${PACKAGE_NAME}_TEST_PATH "${${PACKAGE_NAME}_PATH}/test" CACHE PATH "CMAKE_GROUND_TEST_PATH")
set(${PACKAGE_NAME}_RESOURCE_PATH "${${PACKAGE_NAME}_PATH}/resource" CACHE PATH "CMAKE_GROUND_RESOURCE_PATH")

set(${PACKAGE_NAME}_SOURCE_FILES
  src/utils.cpp
)
add_library(${PACKAGE_NAME}
  ${${PACKAGE_NAME}_SOURCE_FILES}
)
target_include_directories(${PACKAGE_NAME} PUBLIC
  ${${PACKAGE_NAME}_INCLUDE_PATH}
)
target_compile_options(${PACKAGE_NAME} PRIVATE
  -Wall -Wextra -Wpedantic -Werror
)
